# Spins

./: .gitignore  Makefile.am  README  config.h.in  configure.ac
includes/: blocking.h  clusterupdate.h  common.h  lattice.h  metropolis.h  physics.h
src/: Makefile.am  Makefile.in  blocking.c  clusterupdate.c  clusterupdate.h  common.c  conf_file_parser.c  energy.gp  example.cfg  example2.cfg  gmon.out  lattice.c  lattice.h  magnetic_sus.gp  magnetization.gp  main.c  makeplots  metropolis.c  metropolis.h  mikemath.c  mikemath.h  physics.c  specific_heat.gp  spinsClusterBlocking.c  spinsClusterScanT.c  spinsClusterSingleBeta.c  spinsCriticalExps.c  spinsFindCrit.c  spinsMetropolisScanT.c
test/: Makefile.am  mikemath_intpow.c
testsuite/: Makefile.am
testsuite/latticetest/: Makefile.am  latticetest.c  latticetest.exp
testsuite/physicstest/: Makefile.am  physicstest.c  physicstest.exp
